--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Zhenyu Tang's github.io Page
+<!DOCTYPE html>
+<html>
+
+<head lang="en">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zhenyu Tang's github.io Page</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <h1>Zhenyu Tang's github.io Page</h1>
+    <p>Hi there</p>
+</body>
+
+</html>
