--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@
     <p>Hi there</p>
 </body>
 
+<a href="https://info.flagcounter.com/ile2"><img src="https://s01.flagcounter.com/countxl/ile2/bg_ADC3E0/txt_8C3F5E/border_26FFA8/columns_5/maxflags_25/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+
 </html>
