--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zhenyu Tang's github.io Page</title>
+    <title>Zhenyu Tang's Page</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>Zhenyu Tang's github.io Page</h1>
-    <p>Hi there</p>
+    <h1>Zhenyu Tang's Page</h1>
+    <p>Hi there, welcome to my personal webpage built upon GitHub Pages. This site is still under construction.</p>
+    <a href="https://info.flagcounter.com/ile2"><img src="https://s01.flagcounter.com/countxl/ile2/bg_ADC3E0/txt_8C3F5E/border_26FFA8/columns_5/maxflags_25/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 </body>
-
-<a href="https://info.flagcounter.com/ile2"><img src="https://s01.flagcounter.com/countxl/ile2/bg_ADC3E0/txt_8C3F5E/border_26FFA8/columns_5/maxflags_25/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 
 </html>
